load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cloudstorage.go",
        "filestore.go",
        "filestore_test_suite.go",
        "memory.go",
    ],
    importpath = "github.com/google/emitto/source/filestore",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["memory_test.go"],
    embed = [":go_default_library"],
)
