load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/google/emitto/source/sensor/client",
    visibility = ["//visibility:public"],
    deps = [
        "//source/filestore:go_default_library",
        "//source/sensor/fleetspeak:go_default_library",
        "//source/sensor/host:go_default_library",
        "//source/sensor/proto:go_default_library",
        "//source/sensor/suricata:go_default_library",
        "//source/sensor/suricata/proto:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_fleetspeak//fleetspeak/src/common/proto/fleetspeak:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["client_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//source/sensor/host:go_default_library",
        "//source/sensor/proto:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
