load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["fleetspeak.go"],
    importpath = "github.com/google/emitto/source/sensor/fleetspeak",
    visibility = ["//visibility:public"],
    deps = [
        "//source/sensor/proto:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_fleetspeak//fleetspeak/src/client/channel:go_default_library",
        "@com_github_google_fleetspeak//fleetspeak/src/client/service:go_default_library",
        "@com_github_google_fleetspeak//fleetspeak/src/client/socketservice/client:go_default_library",
        "@com_github_google_fleetspeak//fleetspeak/src/common/proto/fleetspeak:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["fleetspeak_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_fleetspeak//fleetspeak/src/client/channel:go_default_library",
        "@com_github_google_fleetspeak//fleetspeak/src/client/service:go_default_library",
        "@com_github_google_fleetspeak//fleetspeak/src/common/proto/fleetspeak:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
    ],
)
