load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fleetspeak.go"],
    importpath = "github.com/google/emitto/source/server/fleetspeak",
    visibility = ["//visibility:public"],
    deps = [
        "//source/sensor/proto:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_fleetspeak//fleetspeak/src/common:go_default_library",
        "@com_github_google_fleetspeak//fleetspeak/src/common/proto/fleetspeak:go_default_library",
        "@com_github_google_fleetspeak//fleetspeak/src/server/proto/fleetspeak_server:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
    ],
)
