load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "emitto_service_proto",
    srcs = ["service.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@go_googleapis//google/rpc:status_proto",
    ],
)

go_proto_library(
    name = "emitto_service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/google/emitto/source/server/proto",
    proto = ":emitto_service_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/rpc:status_go_proto"],
)

go_library(
    name = "go_default_library",
    embed = [":emitto_service_go_proto"],
    importpath = "github.com/google/emitto/source/server/proto",
    visibility = ["//visibility:public"],
)
