load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "service.go",
        "service_helpers.go",
    ],
    importpath = "github.com/google/emitto/source/server/service",
    visibility = ["//visibility:public"],
    deps = [
        "//source/filestore:go_default_library",
        "//source/resources:go_default_library",
        "//source/sensor/proto:go_default_library",
        "//source/server/fleetspeak:go_default_library",
        "//source/server/proto:go_default_library",
        "//source/server/store:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_fleetspeak//fleetspeak/src/common/proto/fleetspeak:go_default_library",
        "@com_github_google_fleetspeak//fleetspeak/src/server/proto/fleetspeak_server:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "service_helpers_test.go",
        "service_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//source/filestore:go_default_library",
        "//source/resources:go_default_library",
        "//source/server/fleetspeak:go_default_library",
        "//source/server/proto:go_default_library",
        "//source/server/store:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_fleetspeak//fleetspeak/src/common/proto/fleetspeak:go_default_library",
        "@com_github_google_fleetspeak//fleetspeak/src/server/proto/fleetspeak_server:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
