load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "conversions.go",
        "datastore.go",
        "memory.go",
        "store.go",
        "store_test_suite.go",
    ],
    importpath = "github.com/google/emitto/source/server/store",
    visibility = ["//visibility:public"],
    deps = [
        "//source/resources:go_default_library",
        "@com_github_fatih_camelcase//:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_google_cloud_go//datastore:go_default_library",
        "@org_golang_google_api//option:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "conversions_test.go",
        "datastore_test.go",
        "memory_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//source/resources:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_google_cloud_go//datastore:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
