load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "emitto_sensor_proto",
    srcs = ["suricata_eve.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "emitto_sensor_go_proto",
    importpath = "github.com/google/emitto/source/sensor/suricata/proto",
    proto = ":emitto_sensor_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":emitto_sensor_go_proto"],
    importpath = "github.com/google/emitto/source/sensor/suricata/proto",
    visibility = ["//visibility:public"],
)
