load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["socket.go"],
    importpath = "github.com/google/emitto/source/sensor/suricata/socket",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_glog//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["socket_test.go"],
    embed = [":go_default_library"],
)
